--- a/app/smarthrui/webapp/manifest.json
+++ b/app/smarthrui/webapp/manifest.json
@@ -1,14 +1,29 @@
 {
-  "_version": "1.58.0",
+  "_version": "1.59.0",
   "sap.app": {
-    "id": "smart.hr.portal",
+    "id": "smarthrui",
     "type": "application",
     "i18n": "i18n/i18n.properties",
     "applicationVersion": {
-      "version": "0.0.1"
+      "version": "1.0.0"
     },
-    "title": "Smart HR Portal",
-    "description": "Smart HR Portal Application"
+    "title": "{{appTitle}}",
+    "description": "{{appDescription}}",
+    "dataSources": {
+      "mainService": {
+        "uri": "/hr/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/metadata.xml",
+          "odataVersion": "4.0"
+        }
+      },
+      "i18n": {
+        "type": "JSON",
+        "uri": "i18n/i18n.properties"
+      }
+    }
   },
   "sap.ui": {
     "technology": "UI5",
@@ -33,53 +48,40 @@
       "libs": {
         "sap.m": {},
         "sap.ui.core": {},
-        "sap.f": {}
+        "sap.f": {},
+        "sap.suite.ui.commons": {},
+        "sap.viz": {}
       }
     },
     "models": {
       "i18n": {
+        "dataSource": "i18n",
         "type": "sap.ui.model.resource.ResourceModel",
         "settings": {
-          "bundleName": "smart.hr.portal.i18n.i18n"
+          "bundleName": "smarthrui.i18n.i18n"
         }
       },
       "": {
-        "type": "sap.ui.model.json.JSONModel",
-        "uri": "model/data.json"
+        "dataSource": "mainService",
+        "type": "sap.ui.model.odata.v4.ODataModel",
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
       }
     },
-    "routing": {
-      "config": {
-        "routerClass": "sap.m.routing.Router",
-        "viewType": "XML",
-        "async": true,
-        "viewPath": "smart.hr.portal.view",
-        "controlAggregation": "pages",
-        "controlId": "app",
-        "clearControlAggregation": false
-      },
-      "routes": [
+    "resources": {
+      "css": [
         {
-          "name": "RouteDashboard",
-          "pattern": ":?query:",
-          "target": ["TargetDashboard"]
+          "uri": "css/style.css"
         }
-      ],
-      "targets": {
-        "TargetDashboard": {
-          "viewType": "XML",
-          "transition": "slide",
-          "clearControlAggregation": false,
-          "viewId": "Dashboard",
-          "viewName": "Dashboard"
-        }
-      }
-    },
-    "rootView": {
-      "viewName": "smart.hr.portal.view.App",
-      "type": "XML",
-      "async": true,
-      "id": "App"
+      ]
     }
+  },
+  "sap.cloud": {
+    "public": true,
+    "service": "smarthrui"
   }
 }
