--- a/app/smarthrui/xs-app.json
+++ b/app/smarthrui/xs-app.json
@@ -1,81 +1,22 @@
 {
-  "welcomeFile": "/index.html",
+  "welcomeFile": "/webapp/index.html",
   "authenticationMethod": "none",
-  "sessionTimeout": 20,
   "routes": [
     {
-      "source": "^/odata/v4/hr-service/(.*)$",
-      "target": "/hr/$1",
-      "destination": "hr-backend",
-      "authenticationType": "none",
-      "csrfProtection": false
-    },
-    {
-      "source": "^/odata/v4/genai-service/(.*)$",
-      "target": "/genai/$1",
-      "destination": "genai-backend",
-      "authenticationType": "none",
-      "csrfProtection": false
-    },
-    {
-      "source": "^/odata/(.*)$",
-      "target": "/$1",
-      "destination": "cap-backend",
-      "authenticationType": "none",
-      "csrfProtection": false
-    },
-    {
-      "source": "^/resources/(.*)$",
-      "target": "/resources/$1",
-      "service": "html5-apps-repo-rt",
-      "authenticationType": "xsuaa"
-    },
-    {
-      "source": "^/test-resources/(.*)$",
-      "target": "/test-resources/$1",
-      "service": "html5-apps-repo-rt",
-      "authenticationType": "xsuaa"
-    },
-    {
-      "source": "^(.*)$",
+      "source": "^/webapp/(.*)$",
       "target": "$1",
-      "service": "html5-apps-repo-rt",
-      "authenticationType": "none"
-    }
-  ],
-  "responseHeaders": [
-    {
-      "name": "Cache-Control",
-      "value": "no-cache, no-store, must-revalidate"
+      "localDir": "webapp",
+      "cacheControl": "no-cache, no-store, must-revalidate"
     },
     {
-      "name": "Pragma",
-      "value": "no-cache"
+      "source": "^/hr/(.*)$",
+      "target": "/hr/$1",
+      "destination": "backend"
     },
     {
-      "name": "Expires",
-      "value": "0"
-    }
-  ],
-  "compression": {
-    "minSize": 2048
-  },
-  "cors": [
-    {
-      "uriPattern": "^/odata/.*$",
-      "allowedOrigin": [
-        {
-          "host": "*",
-          "protocol": "https"
-        },
-        {
-          "host": "localhost",
-          "protocol": "http"
-        }
-      ],
-      "allowedMethods": ["GET", "POST", "PUT", "DELETE", "PATCH", "HEAD", "OPTIONS"],
-      "allowedHeaders": ["Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Authorization", "X-CSRF-Token"],
-      "exposeHeaders": ["Accept", "Authorization", "X-Requested-With", "X-CSRF-Token"]
+      "source": "^/genai/(.*)$",
+      "target": "/genai/$1", 
+      "destination": "backend"
     }
   ]
 }
